# TD1-Tri_insertion

./: CMakeLists.txt  main.cpp  tri_insertion.hpp
test/: CMakeLists.txt  test_tri_insertion.cpp
